tests/baselines/reference/recursiveNamedLambdaCall.errors.txt
==== tests/cases/compiler/recursiveNamedLambdaCall.ts (5 errors) ====
    var promise = function( obj ) {
    	
    		if ( top && top.doScroll ) {
    		     ~~~
!!! error TS2304: Cannot find name 'top'.
    		            ~~~
!!! error TS2304: Cannot find name 'top'.
    			(function doScrollCheck() {
    				if ( false ) {
    
    					try {
    						top.doScroll("left");
    						~~~
!!! error TS2304: Cannot find name 'top'.
    					} catch(e) {
    						return setTimeout( doScrollCheck, 50 );
    						       ~~~~~~~~~~
!!! error TS2304: Cannot find name 'setTimeout'.
    					}
    
    					// detach all dom ready events
    					detach();
    					~~~~~~
!!! error TS2304: Cannot find name 'detach'.
    
    				}
    			})();
    		}
    };